--- a/styles/style.css
+++ b/styles/style.css
@@ -25,17 +25,17 @@ body {
     margin: 0 auto;
 }
 
+.align-center {
+    margin: 0 auto;
+}
+
 .page-header {
-    /* border-bottom: 1px solid #ECECEC; */
     padding: 2.5rem 0;
 }
 
 .page-header .link {
     text-decoration: none;
     font-weight: 500;
-    font-size: 1.4rem;
-    line-height: 1.6;
-    letter-spacing: 0.03rem;
     color: #212121;
 }
 
@@ -80,9 +80,61 @@ body {
 }
 
 .header-contact {
-    margin-left: 21.5rem;
+    margin-left: 20.9rem;
 }
 
 .header-contact .link {
     color: #757575;
+}
+
+.hero {
+    background-color: #2F303A;
+    padding: 20rem 0;
+    border-top: 1px solid #ECECEC;
+}
+
+.hero-title {
+    font-size: 4.4rem;
+    font-weight: 900;
+    line-height: 1.36;
+    letter-spacing: 0.06rem;
+    color: #FFFFFF;
+
+    text-align: center;
+    text-transform: uppercase;
+
+    width: 66rem;
+
+    margin-bottom: 3rem;
+}
+
+.cta {
+    display: block;
+
+    background-color: #2196F3;
+    border: none;
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 1.6rem;
+    line-height: 1.88;
+    letter-spacing: 0.06rem;
+
+    color: #FFFFFF;
+
+    padding: 1rem 3.2rem;
+
+    cursor: pointer;
+}
+
+.cta:hover,
+.cta:focus {
+    background-color: #1186e7;
+}
+
+.cta:active {
+    transform: translateY(2px);
+}
+
+.cta::after {
+    background-color: #1186e7;
 }
